# PulseMSME-AI

./: .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  Dockerfile  README.md  TEAM_PLAN.md  render.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  consent_store.py  data_store.py  main.py
backend/app/adapters/: aa_banking.py  epfo.py  gst.py  upi.py
backend/app/agents/: _util.py  graph.py  ingestion.py  recommendation.py  risk_insight.py  scoring_agent.py  state.py
backend/app/llm/: prompts.py  provider.py  templates.py
backend/app/models/: schemas.py
backend/app/routers/: config_router.py  dashboard.py  msme.py
backend/app/scoring/: enhanced_score.py  loan_eligibility.py  models.py  public_score.py  risk_bands.py
backend/data/: consent_financial_signals.csv  consent_financial_signals.json  msme_master.csv  msme_master.json  public_signals.csv  public_signals.json
backend/scripts/: generate_synthetic_data.py
backend/tests/: conftest.py  test_api.py  test_archetypes.py  test_data_generation.py  test_enhanced_score.py  test_loan_eligibility.py  test_public_score.py  test_risk_bands.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  JourneySteps.tsx  ProgressBar.tsx  PulseMark.tsx  ScoreRing.tsx  Skeleton.tsx  States.tsx  Tooltip.tsx  TopNav.tsx
frontend/src/lib/: AppConfigContext.tsx  AssessmentContext.tsx  api.ts  format.ts  riskBand.ts  types.ts
frontend/src/pages/: AddMsmePage.tsx  AgentProcessingPage.tsx  (+8 more)
