[project]
name = "pulsemsme-backend"
version = "0.1.0"
description = "PulseMSME AI backend — FastAPI + LangGraph MSME financial health scoring engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pandas>=2.2.0",
    "langgraph>=0.2.45",
    "langchain-core>=0.3.15",
    "langchain-google-genai>=2.0.4",
    "langchain-groq>=0.2.1",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
